[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = 'password_lib'
version = "0.0.2"
authors = [
  { name="Ahamed Ruyefa", email="ruyefadf@gmail.com" },
]
description = "The 'password_lib' is a Python package for strong password checking. It validates password strength based on length, lowercase/uppercase characters, special characters, and digits. Enhance your application's security with ease."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ardf/password_utils"
"Bug Tracker" = "https://github.com/ardf/password_utils/issues"