[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = 'password_lib'
version = "0.0.3"
authors = [
  { name="Ahamed Ruyefa", email="ruyefadf@gmail.com" },
]
description = " `password-lib` is a Python library for generating secure passwords, configuring strength requirements, and checking password strength. With customizable length and requirements, it enhances application security. Use password-lib to easily generate strong passwords and ensure password security."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ardf/password_utils"
"Bug Tracker" = "https://github.com/ardf/password_utils/issues"